--- a/index.html
+++ b/index.html
@@ -66,24 +66,24 @@
                 <tr>
                     <th>Player</th>
                     <th>Total Wins</th>
-                    <th>Most Played Deck</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
-                    <td>Alice</td>
-                    <td>5</td>
-                    <td>Elves</td>
-                </tr>
-                <tr>
-                    <td>Bob</td>
-                    <td>7</td>
-                    <td>Dragons</td>
-                </tr>
-                <tr>
-                    <td>Charlie</td>
+                    <td>Mark</td>
                     <td>3</td>
-                    <td>Artifacts</td>
+                </tr>
+                <tr>
+                    <td>Liam</td>
+                    <td>3</td>
+                </tr>
+                <tr>
+                    <td>Jake</td>
+                    <td>2</td>
+                </tr>
+                <tr>
+                    <td>Rhys</td>
+                    <td>0</td>
                 </tr>
             </tbody>
         </table>
@@ -94,36 +94,54 @@
         <table>
             <thead>
                 <tr>
-                    <th>Player</th>
                     <th>Deck Name</th>
-                    <th>Wins with Deck</th>
+                    <th>Wins</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
-                    <td>Alice</td>
+                    <td>Dragon Pre Con</td>
+                    <td>1</td>
+                </tr>
+                <tr>
                     <td>Elves</td>
-                    <td>3</td>
+                    <td>1</td>
                 </tr>
                 <tr>
-                    <td>Alice</td>
-                    <td>Angels</td>
+                    <td>Death + Taxes</td>
+                    <td>1</td>
+                </tr>
+                <tr>
+                    <td>Rhys French Lessons</td>
+                    <td>1</td>
+                </tr>
+                <tr>
+                    <td>Grave Boy Pre Con</td>
+                    <td>1</td>
+                </tr>
+                <tr>
+                    <td>Artifact Black</td>
+                    <td>1</td>
+                </tr>
+                <tr>
+                    <td>Demon Pre Con</td>
+                    <td>1</td>
+                </tr>
+                <tr>
+                    <td>Saruman</td>
                     <td>2</td>
                 </tr>
                 <tr>
-                    <td>Bob</td>
-                    <td>Dragons</td>
-                    <td>5</td>
+                    <td>First Flight Pre Con</td>
+                    <td>0</td>
                 </tr>
                 <tr>
-                    <td>Bob</td>
-                    <td>Goblins</td>
-                    <td>2</td>
+                    <td>Baelyn</td>
+                    <td>0</td>
                 </tr>
                 <tr>
-                    <td>Charlie</td>
-                    <td>Artifacts</td>
-                    <td>3</td>
+                    <td>Space Rhino Pre Con</td>
+                    <td>0</td>
                 </tr>
             </tbody>
         </table>
