--- a/index.html
+++ b/index.html
@@ -95,52 +95,76 @@
             <thead>
                 <tr>
                     <th>Deck Name</th>
+                    <th>Commander</th>
+                    <th>Colours</th>
                     <th>Wins</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <td>Dragon Pre Con</td>
+                    <td>Unknown</td>
+                    <td><img class="mana-symbol" src="red_icon_url" alt="Red" /></td>
                     <td>1</td>
                 </tr>
                 <tr>
                     <td>Elves</td>
+                    <td>Unknown</td>
+                    <td><img class="mana-symbol" src="green_icon_url" alt="Green" /></td>
                     <td>1</td>
                 </tr>
                 <tr>
                     <td>Death + Taxes</td>
+                    <td>Unknown</td>
+                    <td><img class="mana-symbol" src="white_icon_url" alt="White" /> <img class="mana-symbol" src="black_icon_url" alt="Black" /></td>
                     <td>1</td>
                 </tr>
                 <tr>
                     <td>Rhys French Lessons</td>
+                    <td>Unknown</td>
+                    <td><img class="mana-symbol" src="green_icon_url" alt="Green" /> <img class="mana-symbol" src="white_icon_url" alt="White" /></td>
                     <td>1</td>
                 </tr>
                 <tr>
                     <td>Grave Boy Pre Con</td>
+                    <td>Unknown</td>
+                    <td><img class="mana-symbol" src="black_icon_url" alt="Black" /></td>
                     <td>1</td>
                 </tr>
                 <tr>
                     <td>Artifact Black</td>
+                    <td>Unknown</td>
+                    <td><img class="mana-symbol" src="black_icon_url" alt="Black" /> <img class="mana-symbol" src="colorless_icon_url" alt="Colorless" /></td>
                     <td>1</td>
                 </tr>
                 <tr>
                     <td>Demon Pre Con</td>
+                    <td>Unknown</td>
+                    <td><img class="mana-symbol" src="black_icon_url" alt="Black" /> <img class="mana-symbol" src="red_icon_url" alt="Red" /></td>
                     <td>1</td>
                 </tr>
                 <tr>
                     <td>Saruman</td>
+                    <td>Unknown</td>
+                    <td><img class="mana-symbol" src="blue_icon_url" alt="Blue" /> <img class="mana-symbol" src="black_icon_url" alt="Black" /> <img class="mana-symbol" src="white_icon_url" alt="White" /></td>
                     <td>2</td>
                 </tr>
                 <tr>
                     <td>First Flight Pre Con</td>
+                    <td>Unknown</td>
+                    <td><img class="mana-symbol" src="blue_icon_url" alt="Blue" /></td>
                     <td>0</td>
                 </tr>
                 <tr>
                     <td>Baelyn</td>
+                    <td>Unknown</td>
+                    <td><img class="mana-symbol" src="white_icon_url" alt="White" /> <img class="mana-symbol" src="black_icon_url" alt="Black" /></td>
                     <td>0</td>
                 </tr>
                 <tr>
                     <td>Space Rhino Pre Con</td>
+                    <td>Unknown</td>
+                    <td><img class="mana-symbol" src="green_icon_url" alt="Green" /> <img class="mana-symbol" src="blue_icon_url" alt="Blue" /> <img class="mana-symbol" src="white_icon_url" alt="White" /></td>
                     <td>0</td>
                 </tr>
             </tbody>
