--- a/index.html
+++ b/index.html
@@ -104,19 +104,19 @@
                 <tr>
                     <td>Dragon Pre Con</td>
                     <td>Unknown</td>
-                    <td><img class="mana-symbol" src="red_icon_url" alt="Red" /></td>
+                    <td><img class="mana-symbol" src="Red.svg" alt="Red" /></td>
                     <td>1</td>
                 </tr>
                 <tr>
                     <td>Elves</td>
-                    <td>Unknown</td>
-                    <td><img class="mana-symbol" src="green_icon_url" alt="Green" /></td>
+                    <td>Galadriel, Light of Valinor</td>
+                    <td><img class="mana-symbol" src="Green.svg" alt="Green" /> <img class="mana-symbol" src="White.svg" alt="White" /> <img class="mana-symbol" src="Blue.svg" alt="Blue" /></td>
                     <td>1</td>
                 </tr>
                 <tr>
                     <td>Death + Taxes</td>
                     <td>Unknown</td>
-                    <td><img class="mana-symbol" src="white_icon_url" alt="White" /> <img class="mana-symbol" src="black_icon_url" alt="Black" /></td>
+                    <td><img class="mana-symbol" src="white_icon_url" alt="White" /> <img class="mana-symbol" src="Black.svg" alt="Black" /></td>
                     <td>1</td>
                 </tr>
                 <tr>
