--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>Dragon Pre Con</td>
-                    <td>Unknown</td>
-                    <td><img class="mana-symbol" src="Red.svg" alt="Red" /></td>
+                    <td>Draconic Destruction</td>
+                    <td>Atarka, World Render</td>
+                    <td><img class="mana-symbol" src="Red.svg" alt="Red" /> <img class="mana-symbol" src="Green.svg" alt="Green" /></td>
                     <td>1</td>
                 </tr>
                 <tr>
@@ -126,9 +126,9 @@
                     <td>1</td>
                 </tr>
                 <tr>
-                    <td>Grave Boy Pre Con</td>
-                    <td>Unknown</td>
-                    <td><img class="mana-symbol" src="black_icon_url" alt="Black" /></td>
+                    <td>Graveyard Overdrive</td>
+                    <td>Disa, the Restless</td>
+                    <td><img class="mana-symbol" src="Black.svg" alt="Black" /> <img class="mana-symbol" src="Red.svg" alt="Red" /> <img class="mana-symbol" src="Green.svg" alt="Green" /></td>
                     <td>1</td>
                 </tr>
                 <tr>
@@ -138,9 +138,9 @@
                     <td>1</td>
                 </tr>
                 <tr>
-                    <td>Demon Pre Con</td>
-                    <td>Unknown</td>
-                    <td><img class="mana-symbol" src="black_icon_url" alt="Black" /> <img class="mana-symbol" src="red_icon_url" alt="Red" /></td>
+                    <td>Chaos Incarnate</td>
+                    <td>Kardur, Doomscourge</td>
+                    <td><img class="mana-symbol" src="Black.svg" alt="Black" /> <img class="mana-symbol" src="Red.svg" alt="Red" /></td>
                     <td>1</td>
                 </tr>
                 <tr>
@@ -162,9 +162,9 @@
                     <td>0</td>
                 </tr>
                 <tr>
-                    <td>Space Rhino Pre Con</td>
-                    <td>Unknown</td>
-                    <td><img class="mana-symbol" src="green_icon_url" alt="Green" /> <img class="mana-symbol" src="blue_icon_url" alt="Blue" /> <img class="mana-symbol" src="white_icon_url" alt="White" /></td>
+                    <td>Bedecked Brokers</td>
+                    <td>Perrie, the Pulverizer</td>
+                    <td><img class="mana-symbol" src="Green.svg" alt="Green" /> <img class="mana-symbol" src="White.svg" alt="White" /> <img class="mana-symbol" src="Blue.svg" alt="Blue" /></td>
                     <td>0</td>
                 </tr>
             </tbody>
