--- a/index.html
+++ b/index.html
@@ -115,14 +115,14 @@
                 </tr>
                 <tr>
                     <td>Death + Taxes</td>
-                    <td>Unknown</td>
-                    <td><img class="mana-symbol" src="white_icon_url" alt="White" /> <img class="mana-symbol" src="Black.svg" alt="Black" /></td>
+                    <td>Chen, Arcanum Weaver</td>
+                    <td><img class="mana-symbol" src="Red.svg" alt="Red" /> <img class="mana-symbol" src="White.svg" alt="White" /> <img class="mana-symbol" src="Black.svg" alt="Black" /></td>
                     <td>1</td>
                 </tr>
                 <tr>
                     <td>Rhys French Lessons</td>
-                    <td>Unknown</td>
-                    <td><img class="mana-symbol" src="green_icon_url" alt="Green" /> <img class="mana-symbol" src="white_icon_url" alt="White" /></td>
+                    <td>Glarb, Calamity's Augur</td>
+                    <td><img class="mana-symbol" src="Black.svg" alt="Black" /> <img class="mana-symbol" src="Green.svg" alt="Green" /> <img class="mana-symbol" src="Blue.svg" alt="Blue" /></td>
                     <td>1</td>
                 </tr>
                 <tr>
@@ -133,8 +133,8 @@
                 </tr>
                 <tr>
                     <td>Artifact Black</td>
-                    <td>Unknown</td>
-                    <td><img class="mana-symbol" src="black_icon_url" alt="Black" /> <img class="mana-symbol" src="colorless_icon_url" alt="Colorless" /></td>
+                    <td>Ashnod, Flesh Mechanist</td>
+                    <td><img class="mana-symbol" src="Black.svg" alt="Black" /></td>
                     <td>1</td>
                 </tr>
                 <tr>
@@ -145,20 +145,20 @@
                 </tr>
                 <tr>
                     <td>Saruman</td>
-                    <td>Unknown</td>
-                    <td><img class="mana-symbol" src="blue_icon_url" alt="Blue" /> <img class="mana-symbol" src="black_icon_url" alt="Black" /> <img class="mana-symbol" src="white_icon_url" alt="White" /></td>
+                    <td>Saruman of Many Colors</td>
+                    <td><img class="mana-symbol" src="White.svg" alt="White" /> <img class="mana-symbol" src="Blue.svg" alt="Blue" /> <img class="mana-symbol" src="Black.svg" alt="Black" /></td>
                     <td>2</td>
                 </tr>
                 <tr>
-                    <td>First Flight Pre Con</td>
-                    <td>Unknown</td>
-                    <td><img class="mana-symbol" src="blue_icon_url" alt="Blue" /></td>
+                    <td>First Flight</td>
+                    <td>Isperia, Supreme Judge</td>
+                    <td><img class="mana-symbol" src="White.svg" alt="White" /> <img class="mana-symbol" src="Blue.svg" alt="Blue" /></td>
                     <td>0</td>
                 </tr>
                 <tr>
                     <td>Baelyn</td>
-                    <td>Unknown</td>
-                    <td><img class="mana-symbol" src="white_icon_url" alt="White" /> <img class="mana-symbol" src="black_icon_url" alt="Black" /></td>
+                    <td>Baylen, the Haymaker</td>
+                    <td><img class="mana-symbol" src="Red.svg" alt="Red" /> <img class="mana-symbol" src="Green.svg" alt="Green" /> <img class="mana-symbol" src="White.svg" alt="White" /></td>
                     <td>0</td>
                 </tr>
                 <tr>
