--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 </tr>
                 <tr>
                     <td>Death + Taxes</td>
-                    <td>Chen, Arcanum Weaver</td>
+                    <td>Ghen, Arcanum Weaver</td>
                     <td><img class="mana-symbol" src="Red.svg" alt="Red" /> <img class="mana-symbol" src="White.svg" alt="White" /> <img class="mana-symbol" src="Black.svg" alt="Black" /></td>
                     <td>1</td>
                 </tr>
