--- a/index.html
+++ b/index.html
@@ -96,6 +96,13 @@
                 rows.forEach(row => table.querySelector('tbody').appendChild(row));
             }
 
+            // Sort the Wins Table by Total Wins (index 1) and Player Name (index 0)
+            const winsTable = document.querySelector('section:nth-of-type(1) table');
+            sortTableByColumns(winsTable, [
+                { columnIndex: 1, ascending: false }, // Sort by Total Wins descending
+                { columnIndex: 0, ascending: true }  // Then by Player Name ascending
+            ]);
+
             // Sort the Decks Played table by Wins (index 3) and then Deck Name (index 0)
             const decksTable = document.querySelector('section:nth-of-type(2) table');
             sortTableByColumns(decksTable, [
