--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <tbody>
                 <tr>
                     <td>Mark</td>
-                    <td>3</td>
+                    <td>4</td>
                 </tr>
                 <tr>
                     <td>Liam</td>
@@ -122,11 +122,11 @@
                 </tr>
                 <tr>
                     <td>Jake</td>
-                    <td>2</td>
+                    <td>3</td>
                 </tr>
                 <tr>
                     <td>Jo</td>
-                    <td>2</td>
+                    <td>3</td>
                 </tr>
                 <tr>
                     <td>Rhys</td>
@@ -164,7 +164,7 @@
                     <td>Death + Taxes</td>
                     <td>Ghen, Arcanum Weaver</td>
                     <td><img class="mana-symbol" src="Red.svg" alt="Red" /> <img class="mana-symbol" src="White.svg" alt="White" /> <img class="mana-symbol" src="Black.svg" alt="Black" /></td>
-                    <td>1</td>
+                    <td>2</td>
                 </tr>
                 <tr>
                     <td>Rhys French Lessons</td>
@@ -188,7 +188,7 @@
                     <td>Chaos Incarnate</td>
                     <td>Kardur, Doomscourge</td>
                     <td><img class="mana-symbol" src="Black.svg" alt="Black" /> <img class="mana-symbol" src="Red.svg" alt="Red" /></td>
-                    <td>2</td>
+                    <td>3</td>
                 </tr>
                 <tr>
                     <td>Saruman</td>
@@ -213,6 +213,18 @@
                     <td>Perrie, the Pulverizer</td>
                     <td><img class="mana-symbol" src="Green.svg" alt="Green" /> <img class="mana-symbol" src="White.svg" alt="White" /> <img class="mana-symbol" src="Blue.svg" alt="Blue" /></td>
                     <td>0</td>
+                </tr>
+                <tr>
+                    <td>Ahoy Matey's</td>
+                    <td>Admiral Brass, Unsinkable</td>
+                    <td><img class="mana-symbol" src="Black.svg" alt="Black" /> <img class="mana-symbol" src="Red.svg" alt="Red" /> <img class="mana-symbol" src="Blue.svg" alt="Blue" /></td>
+                    <td>0</td>
+                </tr>
+                <tr>
+                    <td>Vampire - Non Vampire</td>
+                    <td>???</td>
+                    <td><img class="mana-symbol" src="Black.svg" alt="Black" /> <img class="mana-symbol" src="White.svg" alt="White" /> <img class="mana-symbol" src="Red.svg" alt="Red" /></td>
+                    <td>1</td>
                 </tr>
             </tbody>
         </table>
