--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 </tr>
                 <tr>
                     <td>Jo</td>
-                    <td>3</td>
+                    <td>4</td>
                 </tr>
                 <tr>
                     <td>Rhys</td>
@@ -182,13 +182,13 @@
                     <td>Artifact Black</td>
                     <td>Ashnod, Flesh Mechanist</td>
                     <td><img class="mana-symbol" src="Black.svg" alt="Black" /></td>
-                    <td>1</td>
+                    <td>2</td>
                 </tr>
                 <tr>
                     <td>Chaos Incarnate</td>
                     <td>Kardur, Doomscourge</td>
                     <td><img class="mana-symbol" src="Black.svg" alt="Black" /> <img class="mana-symbol" src="Red.svg" alt="Red" /></td>
-                    <td>3</td>
+                    <td>4</td>
                 </tr>
                 <tr>
                     <td>Saruman</td>
@@ -225,6 +225,18 @@
                     <td>???</td>
                     <td><img class="mana-symbol" src="Black.svg" alt="Black" /> <img class="mana-symbol" src="White.svg" alt="White" /> <img class="mana-symbol" src="Red.svg" alt="Red" /></td>
                     <td>1</td>
+                </tr>
+                <tr>
+                    <td>The Vamp Clamp</td>
+                    <td>Edgar Markov</td>
+                    <td><img class="mana-symbol" src="Black.svg" alt="Black" /> <img class="mana-symbol" src="White.svg" alt="White" /> <img class="mana-symbol" src="Red.svg" alt="Red" /></td>
+                    <td>0</td>
+                </tr>
+                <tr>
+                    <td>UWU Otters</td>
+                    <td>??</td>
+                    <td><img class="mana-symbol" src="Blue.svg" alt="Blue" /> <img class="mana-symbol" src="Red.svg" alt="Red" /></td>
+                    <td>0</td>
                 </tr>
             </tbody>
         </table>
