--- a/index.html
+++ b/index.html
@@ -114,11 +114,11 @@
             <tbody>
                 <tr>
                     <td>Mark</td>
-                    <td>4</td>
+                    <td>5</td>
                 </tr>
                 <tr>
                     <td>Liam</td>
-                    <td>5</td>
+                    <td>6</td>
                 </tr>
                 <tr>
                     <td>Jake</td>
@@ -126,7 +126,7 @@
                 </tr>
                 <tr>
                     <td>Jo</td>
-                    <td>4</td>
+                    <td>5</td>
                 </tr>
                 <tr>
                     <td>Rhys</td>
@@ -144,6 +144,7 @@
                     <th>Deck Name</th>
                     <th>Commander</th>
                     <th>Colours</th>
+                    <th>Combinations</th>
                     <th>Wins</th>
                 </tr>
             </thead>
@@ -152,91 +153,106 @@
                     <td>Draconic Destruction</td>
                     <td>Atarka, World Render</td>
                     <td><img class="mana-symbol" src="Red.svg" alt="Red" /> <img class="mana-symbol" src="Green.svg" alt="Green" /></td>
+                    <td>Gruul</td>
                     <td>2</td>
                 </tr>
                 <tr>
                     <td>Elves</td>
                     <td>Galadriel, Light of Valinor</td>
                     <td><img class="mana-symbol" src="Green.svg" alt="Green" /> <img class="mana-symbol" src="White.svg" alt="White" /> <img class="mana-symbol" src="Blue.svg" alt="Blue" /></td>
+                    <td>Bant</td>
                     <td>1</td>
                 </tr>
                 <tr>
                     <td>Death + Taxes</td>
                     <td>Ghen, Arcanum Weaver</td>
                     <td><img class="mana-symbol" src="Red.svg" alt="Red" /> <img class="mana-symbol" src="White.svg" alt="White" /> <img class="mana-symbol" src="Black.svg" alt="Black" /></td>
+                    <td>Mardu</td>
                     <td>2</td>
                 </tr>
                 <tr>
                     <td>Rhys French Lessons</td>
                     <td>Glarb, Calamity's Augur</td>
                     <td><img class="mana-symbol" src="Black.svg" alt="Black" /> <img class="mana-symbol" src="Green.svg" alt="Green" /> <img class="mana-symbol" src="Blue.svg" alt="Blue" /></td>
+                    <td>Sultai</td>
                     <td>1</td>
                 </tr>
                 <tr>
                     <td>Graveyard Overdrive</td>
                     <td>Disa, the Restless</td>
                     <td><img class="mana-symbol" src="Black.svg" alt="Black" /> <img class="mana-symbol" src="Red.svg" alt="Red" /> <img class="mana-symbol" src="Green.svg" alt="Green" /></td>
+                    <td>Jund</td>
                     <td>1</td>
                 </tr>
                 <tr>
                     <td>Artifact Black</td>
                     <td>Ashnod, Flesh Mechanist</td>
                     <td><img class="mana-symbol" src="Black.svg" alt="Black" /></td>
-                    <td>2</td>
+                    <td>Black</td>
+                    <td>3</td>
                 </tr>
                 <tr>
                     <td>Chaos Incarnate</td>
                     <td>Kardur, Doomscourge</td>
                     <td><img class="mana-symbol" src="Black.svg" alt="Black" /> <img class="mana-symbol" src="Red.svg" alt="Red" /></td>
-                    <td>4</td>
+                    <td>Rakdos</td>
+                    <td>5</td>
                 </tr>
                 <tr>
                     <td>Saruman</td>
                     <td>Saruman of Many Colors</td>
                     <td><img class="mana-symbol" src="White.svg" alt="White" /> <img class="mana-symbol" src="Blue.svg" alt="Blue" /> <img class="mana-symbol" src="Black.svg" alt="Black" /></td>
-                    <td>2</td>
+                    <td>Esper</td>
+                    <td>3</td>
                 </tr>
                 <tr>
                     <td>First Flight</td>
                     <td>Isperia, Supreme Judge</td>
                     <td><img class="mana-symbol" src="White.svg" alt="White" /> <img class="mana-symbol" src="Blue.svg" alt="Blue" /></td>
+                    <td>Azorius</td>
                     <td>0</td>
                 </tr>
                 <tr>
                     <td>Baelyn</td>
                     <td>Baylen, the Haymaker</td>
                     <td><img class="mana-symbol" src="Red.svg" alt="Red" /> <img class="mana-symbol" src="Green.svg" alt="Green" /> <img class="mana-symbol" src="White.svg" alt="White" /></td>
+                    <td>Naya</td>
                     <td>0</td>
                 </tr>
                 <tr>
                     <td>Bedecked Brokers</td>
                     <td>Perrie, the Pulverizer</td>
                     <td><img class="mana-symbol" src="Green.svg" alt="Green" /> <img class="mana-symbol" src="White.svg" alt="White" /> <img class="mana-symbol" src="Blue.svg" alt="Blue" /></td>
+                    <td>Bant</td>
                     <td>0</td>
                 </tr>
                 <tr>
                     <td>Ahoy Matey's</td>
                     <td>Admiral Brass, Unsinkable</td>
                     <td><img class="mana-symbol" src="Black.svg" alt="Black" /> <img class="mana-symbol" src="Red.svg" alt="Red" /> <img class="mana-symbol" src="Blue.svg" alt="Blue" /></td>
-                    <td>0</td>
+                    <td>Grixis</td>
+                    <td>2</td>
                 </tr>
                 <tr>
                     <td>Vampire - Non Vampire</td>
-                    <td>???</td>
+                    <td>Cormelia, Glamour Thief</td>
                     <td><img class="mana-symbol" src="Black.svg" alt="Black" /> <img class="mana-symbol" src="White.svg" alt="White" /> <img class="mana-symbol" src="Red.svg" alt="Red" /></td>
+                    <td.Mardu</td>
                     <td>1</td>
                 </tr>
                 <tr>
                     <td>The Vamp Clamp</td>
                     <td>Edgar Markov</td>
                     <td><img class="mana-symbol" src="Black.svg" alt="Black" /> <img class="mana-symbol" src="White.svg" alt="White" /> <img class="mana-symbol" src="Red.svg" alt="Red" /></td>
+                    <td>Mardu</td>
                     <td>0</td>
                 </tr>
                 <tr>
                     <td>UWU Otters</td>
-                    <td>??</td>
+                    <td>Bria, Riptide Rogue</td>
                     <td><img class="mana-symbol" src="Blue.svg" alt="Blue" /> <img class="mana-symbol" src="Red.svg" alt="Red" /></td>
-                    <td>0</td>
+                    <td>Izzet</td>
+                    <td>1</td>
                 </tr>
             </tbody>
         </table>
