Little fix for Vampire Non Vamp

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                     <td>Vampire - Non Vampire</td>
                     <td>Cormelia, Glamour Thief</td>
                     <td><img class="mana-symbol" src="Black.svg" alt="Black" /> <img class="mana-symbol" src="White.svg" alt="White" /> <img class="mana-symbol" src="Red.svg" alt="Red" /></td>
-                    <td.Mardu</td>
+                    <td>Mardu</td>
                     <td>1</td>
                 </tr>
                 <tr>
