--- a/index.html
+++ b/index.html
@@ -114,15 +114,15 @@
             <tbody>
                 <tr>
                     <td>Mark</td>
-                    <td>5</td>
-                </tr>
-                <tr>
-                    <td>Liam</td>
                     <td>6</td>
                 </tr>
                 <tr>
+                    <td>Liam</td>
+                    <td>7</td>
+                </tr>
+                <tr>
                     <td>Jake</td>
-                    <td>4</td>
+                    <td>5</td>
                 </tr>
                 <tr>
                     <td>Jo</td>
@@ -130,6 +130,10 @@
                 </tr>
                 <tr>
                     <td>Rhys</td>
+                    <td>0</td>
+                </tr>
+                <tr>
+                    <td>Ollie</td>
                     <td>0</td>
                 </tr>
             </tbody>
@@ -175,7 +179,7 @@
                     <td>Glarb, Calamity's Augur</td>
                     <td><img class="mana-symbol" src="Black.svg" alt="Black" /> <img class="mana-symbol" src="Green.svg" alt="Green" /> <img class="mana-symbol" src="Blue.svg" alt="Blue" /></td>
                     <td>Sultai</td>
-                    <td>1</td>
+                    <td>2</td>
                 </tr>
                 <tr>
                     <td>Graveyard Overdrive</td>
@@ -254,6 +258,20 @@
                     <td>Izzet</td>
                     <td>1</td>
                 </tr>
+                <tr>
+                    <td>ALEXIOS</td>
+                    <td>Alexios, Deimos of Kosmos</td>
+                    <td><img class="mana-symbol" src="Red.svg" alt="Red" /></td>
+                    <td>Red</td>
+                    <td>0</td>
+                </tr> 
+                <tr>
+                    <td>Eternal Might</td>
+                    <td>Temmet, Naktamun's Will</td>
+                    <td><img class="mana-symbol" src="White.svg" alt="White" /><img class="mana-symbol" src="Blue.svg" alt="Blue" /><img class="mana-symbol" src="Black.svg" alt="Black" /></td>
+                    <td>Esper</td>
+                    <td>1</td>
+                </tr>                                
             </tbody>
         </table>
     </section>
