Update to times played

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <tr>
                     <th>Player</th>
                     <th>Total Wins</th>
+                    <th>Matches Played</th>
                 </tr>
             </thead>
             <tbody id="wins-table-body">
