Changes for more updated stuff

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                     <th>Player</th>
                     <th>Total Wins</th>
                     <th>Matches Played</th>
+                    <th>Win Rate</th>
                 </tr>
             </thead>
             <tbody id="wins-table-body">
@@ -37,6 +38,7 @@
                     <th>Colours</th>
                     <th>Combinations</th>
                     <th>Wins</th>
+                    <th>Image</th>
                 </tr>
             </thead>
             <tbody id="decks-table-body">
