--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
     <section>
         <h2 style="text-align: center;">Decks Played</h2>
+        <button id="toggle-inactive-decks">Toggle Inactive Decks</button>
         <table>
             <thead>
                 <tr>
@@ -39,6 +40,7 @@
                     <th>Combinations</th>
                     <th>Wins</th>
                     <th>Image</th>
+                    <th>Active</th>
                 </tr>
             </thead>
             <tbody id="decks-table-body">
